Rebase 3.0 beta engine and novel bedrock engine upon modern 2.0 modified for nms packets